Adjust sizing of the site header and fix text overflow for long user names

--- a/app/assets/stylesheets/layout/dock/nav.css
+++ b/app/assets/stylesheets/layout/dock/nav.css
@@ -6,7 +6,7 @@
     left: -400px;
     bottom: 0;
     width: 400px !important;
-    max-width: 70%;
+    max-width: 90%;
     min-width: 150px;
     margin: 0;
     overflow-y: auto;
